--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,10 @@ platform = espressif8266
 board = d1_mini
 framework = arduino
 lib_deps =
-  adafruit/Adafruit MPU6050 @ ^2.2.6
-  adafruit/Adafruit Unified Sensor @ ^1.1.14
-  adafruit/Adafruit BusIO @ ^1.16.0
-  me-no-dev/ESPAsyncTCP @ ^1.2.2
-  me-no-dev/ESP Async WebServer @ ^1.2.3
+  adafruit/Adafruit MPU6050
+  adafruit/Adafruit Unified Sensor
+  adafruit/Adafruit BusIO
+  me-no-dev/ESPAsyncTCP
+  me-no-dev/ESPAsyncWebServer
 board_build.filesystem = littlefs
+monitor_speed = 115200
