--- a/platformio.ini
+++ b/platformio.ini
@@ -36,8 +36,8 @@ board_build.f_flash = 40000000L
 board_build.flash_mode = dio
 
 ; Memory optimization
-board_build.flash_size = 4M
-board_build.flash_ld = eagle.flash.4m.ld
+; board_build.flash_size = 4M
+; board_build.flash_ld = eagle.flash.4m.ld
 
-; Reduce WiFi TX power for stability
-board_build.ldscript = eagle.flash.4m.ld
+; ; Reduce WiFi TX power for stability
+; board_build.ldscript = eagle.flash.4m.ld
