--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ lib_deps =
   adafruit/Adafruit MPU6050
   adafruit/Adafruit Unified Sensor
   adafruit/Adafruit BusIO
+  bblanchon/ArduinoJson@^6.21.5
 board_build.f_cpu = 160000000L
 monitor_speed = 115200
 
