feat: add ESP32 support with platform-specific conditionals
Co-authored-by: cecli (deepseek/deepseek-reasoner)

--- a/platformio.ini
+++ b/platformio.ini
@@ -39,3 +39,22 @@ board_build.flash_mode = dio
 
 ; ; Reduce WiFi TX power for stability
 ; board_build.ldscript = eagle.flash.4m.ld
+
+[env:dfrobot_beetle_esp32c3]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
+board = dfrobot_beetle_esp32c3
+framework = arduino
+lib_deps =
+  adafruit/Adafruit MPU6050
+  adafruit/Adafruit Unified Sensor
+  adafruit/Adafruit BusIO
+  bblanchon/ArduinoJson@^6.21.5
+upload_speed = 921600
+monitor_speed = 115200
+monitor_rts = 0
+monitor_dtr = 0
+board_build.psram = enabled
+build_flags =
+  -D ESP32_ARDUINO_NO_RGB_BUILTIN ; disable RGB LED on some boards which causes conflict
+  -D ARDUINO_USB_MODE=1 ; enables Serial communication
+  -D ARDUINO_USB_CDC_ON_BOOT=1 ; enables Serial communication
