feat: add WiFi power adjustment for ESP32 C3 boards
Co-authored-by: cecli (deepseek/deepseek-reasoner)

--- a/platformio.ini
+++ b/platformio.ini
@@ -58,3 +58,4 @@ build_flags =
   -D ESP32_ARDUINO_NO_RGB_BUILTIN ; disable RGB LED on some boards which causes conflict
   -D ARDUINO_USB_MODE=1 ; enables Serial communication
   -D ARDUINO_USB_CDC_ON_BOOT=1 ; enables Serial communication
+  -D C_THREE=1 ; WiFi power adjustment for ESP32 C3 boards
