ElegantOTA added - untested!

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,38 +8,6 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:d1_mini]
-platform = espressif8266
-board = d1_mini
-framework = arduino
-lib_deps =
-  adafruit/Adafruit MPU6050
-  adafruit/Adafruit Unified Sensor
-  adafruit/Adafruit BusIO
-  bblanchon/ArduinoJson@^6.21.5
-board_build.f_cpu = 160000000L
-monitor_speed = 115200
-
-; Stability optimizations
-build_flags =
-  ; -D PIO_FRAMEWORK_ARDUINO_MMU_CACHE16_IRAM48
-  ; -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
-  ; -D VTABLES_IN_IRAM
-  ; -D NDEBUG
-  ; -D BEARSSL_SSL_BASIC
-  ; -D LWIP_IPV6=0
-
-; Reduce WiFi power for stability
-board_build.f_flash = 40000000L
-board_build.flash_mode = dio
-
-; Memory optimization
-; board_build.flash_size = 4M
-; board_build.flash_ld = eagle.flash.4m.ld
-
-; ; Reduce WiFi TX power for stability
-; board_build.ldscript = eagle.flash.4m.ld
-
 [env:dfrobot_beetle_esp32c3]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
 board = dfrobot_beetle_esp32c3
@@ -49,13 +17,25 @@ lib_deps =
   adafruit/Adafruit Unified Sensor
   adafruit/Adafruit BusIO
   bblanchon/ArduinoJson@^6.21.5
+  ayushsharma82/ElegantOTA@^3.1.7
+  ESP32Async/AsyncTCP@3.3.8
+  ESP32Async/ESPAsyncWebServer@3.7.4
 upload_speed = 921600
 monitor_speed = 115200
 monitor_rts = 0
 monitor_dtr = 0
 board_build.psram = enabled
 build_flags =
+  -fpermissive
   -D ESP32_ARDUINO_NO_RGB_BUILTIN ; disable RGB LED on some boards which causes conflict
   -D ARDUINO_USB_MODE=1 ; enables Serial communication
   -D ARDUINO_USB_CDC_ON_BOOT=1 ; enables Serial communication
   -D C_THREE=1 ; WiFi power adjustment for ESP32 C3 boards
+  -D ELEGANTOTA_USE_ASYNC_WEBSERVER=1
+
+; Enable LittleFS filesystem
+board_build.filesystem = littlefs
+
+; OTA partition scheme for ESP32
+board_upload.flash_size = 16MB
+board_build.partitions = default_16MB.csv
