Config screen captive portal works

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,9 @@
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.04/platform-espressif32.zip
 board = dfrobot_beetle_esp32c3
 framework = arduino
+; Enable LittleFS filesystem
+board_build.filesystem = littlefs
+
 lib_deps =
   adafruit/Adafruit MPU6050
   adafruit/Adafruit Unified Sensor
@@ -32,10 +35,6 @@ build_flags =
   -D ARDUINO_USB_CDC_ON_BOOT=1 ; enables Serial communication
   -D C_THREE=1 ; WiFi power adjustment for ESP32 C3 boards
   -D ELEGANTOTA_USE_ASYNC_WEBSERVER=1
+  -D ELEGANTOTA_USE_ASYNC_WEBSERVER=1 ; for OTA update
 
-; Enable LittleFS filesystem
-board_build.filesystem = littlefs
 
-; OTA partition scheme for ESP32
-board_upload.flash_size = 16MB
-board_build.partitions = default_16MB.csv
